Cleanup build files and update sponge module